# EFS

./: .gitignore  CMakeLists.txt  README.md  bytes.py  createVHD.py  utilities.h
FormatTool/: format_tool.h  main.cpp
OS/: error.h  main.cpp  os.h  params.h  user.h
OS/APP/: CLIController.h  app.h  light.h  main.cpp  screen.h  vim.h
OS/FBC/: fbc.h  test.cpp
OS/FSC/: file_system_controller.h  fsc.h  test.cpp
OS/VFS/: part.h  test.cpp  vfs.h
OS/VHD/: disk.cpp  disk.h  vhd.h
VM/: bios.h  bootloader.cpp  bootloader.h  main.cpp  tiny_efs.h
VirtualMachine/: data.in  data.vhd
VirtualMachine/SLOT_1/: data.vhd
VirtualMachine/SLOT_2/: data.vhd
VirtualMachine/SLOT_X/USB_1/: data.vhd
