cmake_minimum_required(VERSION 3.10)
project(EFS)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -static -lpthread")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/VirtualMachine")
add_executable(OS OS/main.cpp OS/params.h OS/VHD/vhd.h OS/FBC/fbc.h utilities.h
        OS/os.h OS/FSC/fsc.h OS/APP/app.h OS/VFS/vfs.h OS/user.h OS/VFS/part.h OS/error.h OS/APP/screen.h)
add_executable(VM VM/bios.h VM/main.cpp VM/tiny_efs.h utilities.h)
add_executable(FormatTool FormatTool/format_tool.h FormatTool/main.cpp VM/tiny_efs.h utilities.h)
#add_executable(APP OS/APP/main.cpp OS/APP/app.h utilities.h)
#add_executable(FSC OS/FSC/test.cpp OS/FSC/file_system_controller.h)
#add_executable(VHD_FBC OS/FBC/fbc.h OS/VHD/vhd.h OS/FBC/test.cpp OS/params.h utilities.h)
#add_executable(FSC OS/FSC/fsc.h OS/VFS/test.cpp utilities.h OS/params.h OS/FBC/fbc.h OS/VHD/vhd.h)